--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
-  "name": "Criptocurrency_project",
-  "packageManager": "yarn@4.1.0"
+  "name": "criptocurrency_project",
+  "scripts": {
+    "dev": "vite dev"
+  },
+  "dependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
+    "axios": "^1.6.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vite": "^5.1.5"
+  }
 }
